docs: restructure and expand documentation with screenshots
Splits manual installation into its own page (manual-installation.md)
to keep getting-started.md focused on first-run steps. Adds a new
support.md page and a stylesheets/extra.css to center images.

Expands user-guide.md with sections covering the main screen,
preferences pages, and keyboard shortcuts, all illustrated with
light/dark screenshots. Adds the admonition markdown extension and
a Support entry to the mkdocs nav.